[gd_scene load_steps=12 format=3 uid="uid://dasfs5gf6idg7"]

[ext_resource type="Script" uid="uid://deh1q76j8ldma" path="res://script/victory.gd" id="1_4r1yv"]
[ext_resource type="Shader" uid="uid://b6gul5yixb64n" path="res://assets/victory.gdshader" id="2_8hrio"]
[ext_resource type="FontFile" uid="uid://88wav2qhbqpk" path="res://m6x11plus.ttf" id="3_qf7ln"]
[ext_resource type="Script" uid="uid://bfyyp0aidq81q" path="res://script/reset_button.gd" id="4_p4tix"]
[ext_resource type="Texture2D" uid="uid://bdhynlrybsgpe" path="res://assets/UI_play.png" id="5_7buwx"]
[ext_resource type="Texture2D" uid="uid://dtpxreqiyj1qn" path="res://assets/UI_reset.png" id="5_836pt"]
[ext_resource type="Texture2D" uid="uid://dcgqt0dgaw623" path="res://assets/UI_play_pressed.png" id="6_dne65"]
[ext_resource type="Texture2D" uid="uid://ci7ytkhl2wmd7" path="res://assets/UI_reset_pressed.png" id="6_mco6a"]
[ext_resource type="AudioStream" uid="uid://c21w2860edd0f" path="res://assets/sounds/achievement.mp3" id="7_5cry7"]
[ext_resource type="AudioStream" uid="uid://b0bej7xe5fdbd" path="res://assets/sounds/puzzle-wrong.mp3" id="8_rvwg3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qf7ln"]
shader = ExtResource("2_8hrio")
shader_parameter/blur_radius = 2.0
shader_parameter/blur_strength = 3

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4r1yv")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_qf7ln")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_right = 425.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 320

[node name="VictoryText" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.303233, 0.303233, 0.303233, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_qf7ln")
theme_override_font_sizes/font_size = 246
text = "ERROR"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Details" type="Label" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_qf7ln")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResetButton" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120
script = ExtResource("4_p4tix")

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/ResetButton"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/ResetButton/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("5_836pt")
texture_pressed = ExtResource("6_mco6a")

[node name="PlayButton" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/PlayButton"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/PlayButton/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("5_7buwx")
texture_pressed = ExtResource("6_dne65")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5cry7")
volume_db = -15.0

[node name="Failure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rvwg3")
volume_db = -15.0

[connection signal="button_down" from="VBoxContainer/HBoxContainer/ResetButton/Control/TextureButton" to="VBoxContainer/HBoxContainer/ResetButton" method="_on_texture_button_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/PlayButton/Control/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
